# BachelorthesisSourcecode

./: README.md
Benchmark/Parallel/: CMakeLists.txt  benchmark.sh  main.cpp
Benchmark/Sequential/: main.cpp
Output/: vtk_test.ipynb
Parallel/: main.cpp
Sequential/: main.cpp
